--- a/index.html
+++ b/index.html
@@ -4,68 +4,92 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <!--Top line-->
+    <!--#region header-->
 
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-span">Studio</span>
+      </a>
+      <nav class="nav">
+        <ul class="menu">
+          <li class="menu-item"><a class="menu-link" href="">Studio</a></li>
+          <li class="menu-item"><a class="menu-link" href="">Portfolio</a></li>
+          <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
 
-    <!--Main-->
+    <!--#endregion header-->
+
+    <!--#region hero-->
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
 
-      <!--Features-->
+      <!--#endregion hero-->
 
-      <section>
-        <h2>Features</h2>
+      <!--#region features-->
+
+      <section class="features">
+        <h2 hidden>Features</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="feature-subtitle">Strategy</h3>
+            <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="feature-subtitle">Punctuality</h3>
+            <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="feature-subtitle">Diligence</h3>
+            <p class="feature-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="feature-subtitle">Technologies</h3>
+            <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -73,56 +97,96 @@
         </ul>
       </section>
 
-      <!--Our Team-->
+      <!--#endregion features-->
 
-      <section>
-        <h2>Our Team</h2>
+      <!--#region out team-->
+
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-list">
             <img
               src="./images/img-3.jpg"
               alt="Photo Product Designer Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/img-2.jpg"
               alt="Photo Frontend Developer Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/img-1.jpg"
               alt="Photo Marketing Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/img.jpg"
               alt="Photo UI DEsigner Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
+
+      <!--#endregion out team-->
+
+      <h2 class="portfolio-title">Our Portfolio</h2>
+      <ul>
+        <li>
+          <img src="./images\Banking-App.jpg" alt="banking-app" />
+          <h3>Banking App</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img src="./images\Cashless-Payment.jpg" alt="cashless-payment" />
+          <h3>Cashless Payment</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images\Meditation-App.jpg" alt="meditation-app" />
+          <h3>Cashless Payment</h3>
+          <p>Marketing</p>
+        </li>
+        <li><img src="./images\Taxi-Service.jpg" alt="Taxi-Service" /></li>
+        <h3>Meditation App</h3>
+        <p>App</p>
+        <li>
+          <img
+            src="./images\Screen-Illustrations.png"
+            alt="Screen-Illustrations"
+          />
+          <h3>Screen Illustrations</h3>
+          <p>Design</p>
+        </li>
+        <li>
+          <img src="./images\Online-Courses.jpg" alt="Online-Courses" />
+          <h3>Online Courses</h3>
+          <p>Marketing</p>
+        </li>
+      </ul>
+      <!-- region portfolio -->
     </main>
 
-    <!--Footer-->
+    <!--#region footer-->
 
     <footer>
       <a href="./index.html">WebStudio</a>
@@ -131,5 +195,7 @@
         marketing & growth solutions.
       </p>
     </footer>
+
+    <!--#endregion footer-->
   </body>
 </html>
