--- a/index.html
+++ b/index.html
@@ -152,33 +152,68 @@
       <h2 class="portfolio-title">Our Portfolio</h2>
       <ul>
         <li>
-          <img src="./images\Banking-App.jpg" alt="banking-app" />
+          <img
+            src="./images\banking-app.jpg"
+            alt="banking-app"
+            width="360"
+            ;
+            height="300"
+            ;
+          />
           <h3>Banking App</h3>
           <p>App</p>
         </li>
         <li>
-          <img src="./images\Cashless-Payment.jpg" alt="cashless-payment" />
+          <img
+            src="./images\cashless-payment.jpg"
+            alt="cashless-payment"
+            width="360"
+            ;
+            height="300"
+            ;
+          />
           <h3>Cashless Payment</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./images\Meditation-App.jpg" alt="meditation-app" />
+          <img
+            src="./images\meditation-app.jpg"
+            alt="meditation-app"
+            width="360"
+            ;
+            height="300"
+            ;
+          />
           <h3>Cashless Payment</h3>
           <p>Marketing</p>
         </li>
-        <li><img src="./images\Taxi-Service.jpg" alt="Taxi-Service" /></li>
+        <li>
+          <img src="./images\Taxi-Service.jpg" alt="taxi-service" width="360";
+          height="300"; /
+        </li>
         <h3>Meditation App</h3>
         <p>App</p>
         <li>
           <img
-            src="./images\Screen-Illustrations.png"
+            src="./images\screen-illustrations.jpg"
             alt="Screen-Illustrations"
+            width="360"
+            ;
+            height="300"
+            ;
           />
           <h3>Screen Illustrations</h3>
           <p>Design</p>
         </li>
         <li>
-          <img src="./images\Online-Courses.jpg" alt="Online-Courses" />
+          <img
+            src="./images\online-courses.jpg"
+            alt="Online-Courses"
+            width="360"
+            ;
+            height="300"
+            ;
+          />
           <h3>Online Courses</h3>
           <p>Marketing</p>
         </li>
@@ -188,9 +223,11 @@
 
     <!--#region footer-->
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo-footer" href="./index.html"
+        >Web<span class="logo-footer-span">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
