change after validator

--- a/index.html
+++ b/index.html
@@ -153,66 +153,60 @@
       <ul>
         <li>
           <img
-            src="./images\banking-app.jpg"
+            src="./images/banking-app.jpg"
             alt="banking-app"
             width="360"
-            ;
             height="300"
-            ;
           />
           <h3>Banking App</h3>
           <p>App</p>
         </li>
         <li>
           <img
-            src="./images\cashless-payment.jpg"
+            src="./images/cashless-payment.jpg"
             alt="cashless-payment"
             width="360"
-            ;
             height="300"
-            ;
           />
           <h3>Cashless Payment</h3>
           <p>Marketing</p>
         </li>
         <li>
           <img
-            src="./images\meditation-app.jpg"
+            src="./images/meditation-app.jpg"
             alt="meditation-app"
             width="360"
-            ;
             height="300"
-            ;
           />
           <h3>Cashless Payment</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./images\Taxi-Service.jpg" alt="taxi-service" width="360";
-          height="300"; /
+          <img
+            src="./images/taxi-service.jpg"
+            alt="taxi-service"
+            width="360"
+            height="300"
+          />
+          <h3>Meditation App</h3>
+          <p>App</p>
         </li>
-        <h3>Meditation App</h3>
-        <p>App</p>
         <li>
           <img
-            src="./images\screen-illustrations.jpg"
+            src="./images/screen-illustrations.jpg"
             alt="Screen-Illustrations"
             width="360"
-            ;
             height="300"
-            ;
           />
           <h3>Screen Illustrations</h3>
           <p>Design</p>
         </li>
         <li>
           <img
-            src="./images\online-courses.jpg"
+            src="./images/online-courses.jpg"
             alt="Online-Courses"
             width="360"
-            ;
             height="300"
-            ;
           />
           <h3>Online Courses</h3>
           <p>Marketing</p>
