--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <li>
           <img
             src="./images/screen-illustrations.jpg"
-            alt="Screen-Illustrations"
+            alt="screen-illustrations"
             width="360"
             height="300"
           />
