--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
             width="360"
             height="300"
           />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
+          <h3>Meditation App</h3>
+          <p>App</p>
         </li>
         <li>
           <img
@@ -188,8 +188,8 @@
             width="360"
             height="300"
           />
-          <h3>Meditation App</h3>
-          <p>App</p>
+          <h3>Taxi Service</h3>
+          <p>Marketing</p>
         </li>
         <li>
           <img
